Update analítica - pasos.ipynb

--- a/EDA.ipynb/analítica - pasos.ipynb
+++ b/EDA.ipynb/analítica - pasos.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# **Título con el contenido concreto del Notebook/fichero .py**\n",
     "\n",
-    "# 1. Importaciones\n",
+    "# I. Importaciones\n",
     "  ## I.1. software de librerías\n",
     "  ## I.2. datos de ficheros propios\n",
     "\n",
